# foxtrot-website

./: Cargo.toml  LICENSE  load_website.txt
backend/: Cargo.toml
backend/src/: graphql_schema.rs  handlers.rs  main.rs  models.rs
frontend/: Cargo.toml
frontend/public/: index.html
frontend/public/assets/styles/: main.css  theme.css
frontend/src/: lib.rs  router.rs
frontend/src/components/: about_page.rs  community_page.rs  contact_page.rs  footer.rs  header.rs  home_page.rs  mining_page.rs  mod.rs  navigation.rs  staking_page.rs  wallet_page.rs
frontend/src/graphql/: mutations.rs  queries.rs
frontend/src/utils/: helpers.rs
