[package]
name = "foxtrot-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2.92"
gloo = "0.11.0"
graphql_client = "0.14.0"
async-graphql = "7.0.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_derive = "1.0.204"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[lib]
crate-type = ["cdylib"]
